index version validated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css" />
 </head>
 <body>
-    
+
     <div id="top-bar">
         <div id="name">
             <h1>David Stocker</h1>
@@ -23,7 +23,7 @@
     </div>
     <div class="main">
         <h2>About Me</h2>
-        <img class="left" src="assets/images/placeholder-profile.jpg">
+        <img class="left" alt="David Stocker, at your service" src="assets/images/placeholder-profile.jpg">
         <p>
             My name is David Stocker, and I currently live in the Bon Air area of Chesterfield County, VA. I'm studying to become a full-stack web developer at the University of Richmond School of Continuing and Profesional Studies. After dabbling with HTML, CSS, Python, MySQL, and PHP, I'm excited to finally take steps toward becomming a full-time web devloper!
         </p>
