--- a/index.html
+++ b/index.html
@@ -5,29 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>David Stocker, Developer</title>
-    <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-
-    <div id="top-bar">
-        <div id="name">
-            <h1>David Stocker</h1>
-        </div>
-        <div id="nav-buttons">
-            <ul>
-                <li>About</li>
-                <li>Portfolio</li>
-                <li>Contact</li>
-            </ul>
+    <div id="header-bar">
+        <div id="center-bar">
+            <div id="element-1">
+                <h1>David Stocker</h1>
+            </div>
+            <div class="button" id="element-2">
+                <a href=#>Contact</a>
+            </div>
+            <div class="button" id="element-3">
+                <a href=#>Portfolio</a>
+            </div>
+            <div class="button" id="element-4">
+                <a href=#>About</a>
+            </div>
         </div>
     </div>
-    <div class="main">
-        <h2>About Me</h2>
-        <img class="left" alt="David Stocker, at your service" src="assets/images/placeholder-profile.jpg">
-        <p>
+    <div class="main-content">
+        <h2 id="about-me">About Me</h2>
+        <img alt="David Stocker, at your service" id="profile-img" src="assets/images/placeholder-profile.jpg">
+        <p class="text-margins">
             My name is David Stocker, and I currently live in the Bon Air area of Chesterfield County, VA. I'm studying to become a full-stack web developer at the University of Richmond School of Continuing and Profesional Studies. After dabbling with HTML, CSS, Python, MySQL, and PHP, I'm excited to finally take steps toward becomming a full-time web devloper!
         </p>
-        <p>
+        <p class="text-margins">
             From 2001 to 2015, I worked as a professional guitar transcriber and freelance editor in the music print publishing industry. During that time, I contributed to hundreds of published Guitar/Vocal songbooks. I also taught myself <a target="_blank" href=#>LilyPond</a> - a markup language and layout engine for music scoring. Using LilyPond is similar to using HTML. Learning LilyPond fostered my interest in coding and programming languages.
         </p>
     </div>
