--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
                 <a href="contact.html">Contact</a>
             </div>
             <div class="button" id="element-3">
-                <a href=#>Portfolio</a>
+                <a href="portfolio.html">Portfolio</a>
             </div>
             <div class="button" id="element-4">
                 <a href="index.html">About</a>
