--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="contact.html">Contact</a>
             </div>
             <div class="button" id="element-3">
-                <a href=#>Portfolio</a>
+                <a href="portfolio.html">Portfolio</a>
             </div>
             <div class="button" id="element-4">
                 <a href="index.html">About</a>
@@ -33,7 +33,7 @@
             My name is David Stocker, and I currently live in the Bon Air area of Chesterfield County, VA. I'm studying to become a full-stack web developer at the University of Richmond School of Continuing and Profesional Studies. After dabbling with HTML, CSS, Python, MySQL, and PHP, I'm excited to finally take steps toward becomming a full-time web devloper!
         </p>
         <p class="text-margins">
-            From 2001 to 2015, I worked as a professional guitar transcriber and freelance editor in the music print publishing industry. During that time, I contributed to hundreds of published Guitar/Vocal songbooks. I also taught myself <a target="_blank" href="http://lilypond.org/">LilyPond</a> - a markup language and layout engine for music scoring. Using LilyPond is similar to using HTML. Learning LilyPond fostered my interest in coding and programming languages.
+            From 2001 to 2015, I worked as a professional guitar transcriber and freelance editor in the music print publishing industry. During that time, I contributed to hundreds of published Guitar/Vocal songbooks. I also taught myself <a target="_blank" href="http://lilypond.org/">LilyPond</a> &ndash; a markup language and layout engine for music scoring. Using LilyPond is similar to using HTML. Learning LilyPond fostered my interest in coding and programming languages.
         </p>
     </div>
 </body>
