final version for week 1

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact David</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
@@ -29,19 +29,31 @@
         <h2 class="teal-heading">Portfolio</h2>
         <hr>
         <div>
-            <img class="gallery-img" alt="project 1" src="assets/images/placeholder-profile.jpg">
-            <div class="gallery-btn">Project 1</div>
+            <img id="tile-2" class="gallery-img" alt="project 1" src="assets/images/placeholder-profile.jpg">
+            <!-- <div id="tile-2" class="gallery-btn">Project 2</div> -->
         </div>
-        <img class="gallery-img" alt="project 2" src="assets/images/placeholder-profile.jpg">
-        <img class="gallery-img" alt="project 3" src="assets/images/placeholder-profile.jpg">
+        <div>
+            <img id="tile-2" class="gallery-img" alt="project 2" src="assets/images/placeholder-profile.jpg">
+            <!-- <div id="tile-2" class="gallery-btn">Project 2</div> -->
+        </div>
+        <div>
+            <img id="tile-3" class="gallery-img" alt="project 3" src="assets/images/placeholder-profile.jpg">
+            <!-- <div id="tile-3" class="gallery-btn">Project 1</div> -->
+        </div>
         <br>
-        <img class="gallery-img" alt="project 4" src="assets/images/placeholder-profile.jpg">
-        <img class="gallery-img" alt="project 5" src="assets/images/placeholder-profile.jpg">
-        <img class="gallery-img" alt="project 6" src="assets/images/placeholder-profile.jpg">
+        <div>
+            <img id="tile-4" class="gallery-img" alt="project 4" src="assets/images/placeholder-profile.jpg">
+            <!-- <div id="tile-4" class="gallery-btn">Project 1</div> -->
+        </div>
+        <div>
+            <img id="tile-5" class="gallery-img" alt="project 5" src="assets/images/placeholder-profile.jpg">
+            <!-- <div id="tile-5" class="gallery-btn">Project 1</div> -->
+        </div>
+        <div>
+            <img id="tile-6" class="gallery-img" alt="project 6" src="assets/images/placeholder-profile.jpg">
+            <!-- <div id="tile-6" class="gallery-btn">Project 1</div> -->
+        </div>
         <br>
-        <img class="gallery-img" alt="project 7" src="assets/images/placeholder-profile.jpg">
-        <img class="gallery-img" alt="project 8" src="assets/images/placeholder-profile.jpg">
-        <img class="gallery-img" alt="project 9" src="assets/images/placeholder-profile.jpg">
     </div>
 </body>
 </html>
