last commit - added TODOs to the README

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,28 +29,28 @@
         <h2 class="teal-heading">Portfolio</h2>
         <hr>
         <div>
-            <img id="tile-2" class="gallery-img" alt="project 1" src="assets/images/placeholder-profile.jpg">
+            <a target="_blank" href=#><img class="gallery-img" alt="project 1" src="assets/images/placeholder-profile.jpg"></a>
             <!-- <div id="tile-2" class="gallery-btn">Project 2</div> -->
         </div>
         <div>
-            <img id="tile-2" class="gallery-img" alt="project 2" src="assets/images/placeholder-profile.jpg">
+            <a target="_blank" href=#><img class="gallery-img" alt="project 2" src="assets/images/placeholder-profile.jpg"></a>
             <!-- <div id="tile-2" class="gallery-btn">Project 2</div> -->
         </div>
         <div>
-            <img id="tile-3" class="gallery-img" alt="project 3" src="assets/images/placeholder-profile.jpg">
+            <a target="_blank" href=#><img class="gallery-img" alt="project 3" src="assets/images/placeholder-profile.jpg"></a>
             <!-- <div id="tile-3" class="gallery-btn">Project 1</div> -->
         </div>
         <br>
         <div>
-            <img id="tile-4" class="gallery-img" alt="project 4" src="assets/images/placeholder-profile.jpg">
+            <a target="_blank" href=#><img class="gallery-img" alt="project 4" src="assets/images/placeholder-profile.jpg"></a>
             <!-- <div id="tile-4" class="gallery-btn">Project 1</div> -->
         </div>
         <div>
-            <img id="tile-5" class="gallery-img" alt="project 5" src="assets/images/placeholder-profile.jpg">
+            <a target="_blank" href=#><img class="gallery-img" alt="project 5" src="assets/images/placeholder-profile.jpg"></a>
             <!-- <div id="tile-5" class="gallery-btn">Project 1</div> -->
         </div>
         <div>
-            <img id="tile-6" class="gallery-img" alt="project 6" src="assets/images/placeholder-profile.jpg">
+            <a target="_blank" href=#><img class="gallery-img" alt="project 6" src="assets/images/placeholder-profile.jpg"></a>
             <!-- <div id="tile-6" class="gallery-btn">Project 1</div> -->
         </div>
         <br>
