finally added buttons to the tiles in portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,30 +28,30 @@
     <div class="main-content">
         <h2 class="teal-heading">Portfolio</h2>
         <hr>
-        <div>
-            <a target="_blank" href=#><img class="gallery-img" alt="project 1" src="assets/images/placeholder-profile.jpg"></a>
-            <!-- <div id="tile-2" class="gallery-btn">Project 2</div> -->
+        <div class="tile">
+            <img src="assets/images/placeholder-profile.jpg" alt="project 1">
+            <button class="btn">Project 1</button>
         </div>
-        <div>
-            <a target="_blank" href=#><img class="gallery-img" alt="project 2" src="assets/images/placeholder-profile.jpg"></a>
-            <!-- <div id="tile-2" class="gallery-btn">Project 2</div> -->
+        <div class="tile">
+            <img src="assets/images/placeholder-profile.jpg" alt="project 2">
+            <button class="btn">Project 2</button>
         </div>
-        <div>
-            <a target="_blank" href=#><img class="gallery-img" alt="project 3" src="assets/images/placeholder-profile.jpg"></a>
-            <!-- <div id="tile-3" class="gallery-btn">Project 1</div> -->
+        <div class="tile">
+            <img src="assets/images/placeholder-profile.jpg" alt="project 3">
+            <button class="btn">Project 3</button>
         </div>
-        <br>
-        <div>
-            <a target="_blank" href=#><img class="gallery-img" alt="project 4" src="assets/images/placeholder-profile.jpg"></a>
-            <!-- <div id="tile-4" class="gallery-btn">Project 1</div> -->
+        
+        <div class="tile">
+            <img src="assets/images/placeholder-profile.jpg" alt="project 4">
+            <button class="btn">Project 4</button>
         </div>
-        <div>
-            <a target="_blank" href=#><img class="gallery-img" alt="project 5" src="assets/images/placeholder-profile.jpg"></a>
-            <!-- <div id="tile-5" class="gallery-btn">Project 1</div> -->
+        <div class="tile">
+            <img src="assets/images/placeholder-profile.jpg" alt="project 5">
+            <button class="btn">Project 5</button>
         </div>
-        <div>
-            <a target="_blank" href=#><img class="gallery-img" alt="project 6" src="assets/images/placeholder-profile.jpg"></a>
-            <!-- <div id="tile-6" class="gallery-btn">Project 1</div> -->
+        <div class="tile">
+            <img src="assets/images/placeholder-profile.jpg" alt="project 6">
+            <button class="btn">Project 6</button>
         </div>
         <br>
     </div>
