empty commit message

--- a/contact.html
+++ b/contact.html
@@ -38,5 +38,8 @@
             <button type="submit" form="contact" value="Submit">Submit</button>
         </form>
     </div>
+    <div class="footer">
+        <p id="copyright">Copyright &copy; 2018 David Stocker</p>
+    </div>
 </body>
 </html>
