--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
             From 2001 to 2015, I worked as a professional guitar transcriber and freelance editor in the music print publishing industry. During that time, I contributed to hundreds of published Guitar/Vocal songbooks. I also taught myself <a target="_blank" href="http://lilypond.org/">LilyPond</a> &ndash; a markup language and layout engine for music scoring. Using LilyPond is similar to using HTML. Learning LilyPond fostered my interest in coding and programming languages.
         </p>
     </div>
+    <div class="footer">
+        <p id="copyright">Copyright &copy; 2018 David Stocker</p>
+    </div>
 </body>
 </html>
