--- a/portfolio.html
+++ b/portfolio.html
@@ -55,5 +55,8 @@
         </div>
         <br>
     </div>
+    <div class="footer">
+        <p id="copyright">Copyright &copy; 2018 David Stocker</p>
+    </div>
 </body>
 </html>
